--- a/charts/opencloud-microservices/deployments/timoni/clamav/configmap.yaml
+++ b/charts/opencloud-microservices/deployments/timoni/clamav/configmap.yaml
@@ -10,25 +10,37 @@ metadata:
   namespace: clamav
 data:
   ###############################################################################
-  # Persistence StorageClass and AccessModes (global defaults)
-  ###############################################################################
-  PERSISTENCE_STORAGE_CLASS_NAME: ""
-  # Comma-separated for runtime to split into a list, e.g. "ReadWriteMany" or "ReadWriteOnce,ReadOnlyMany"
-  PERSISTENCE_ACCESS_MODES: "ReadWriteOnce"
-
-  ###############################################################################
-  # ClamAV Configuration
+  # High Availability Configuration
   ###############################################################################
   CLAMAV_REPLICA_COUNT: "1"
-  CLAMAV_RESOURCES_LIMITS_CPU: "500m"
-  CLAMAV_RESOURCES_LIMITS_MEMORY: "512Mi"
-  CLAMAV_RESOURCES_REQUESTS_CPU: "250m"
-  CLAMAV_RESOURCES_REQUESTS_MEMORY: "256Mi"
-  CLAMAV_PERSISTENCE_SIZE: "10Gi"
-  CLAMAV_FRESHCLAM_IMAGE_TAG: "1.4.0"
-  CLAMAV_CLAMD_IMAGE_TAG: "1.4.0"
-  CLAMAV_ICAP_IMAGE_TAG: "0.5.10"
-  CLAMAV_ICAP_IMAGE_REPOSITORY: "bmi/opendesk/components/platform-development/images/clamav-icap"
-  CLAMAV_ICAP_IMAGE_REGISTRY: "registry.opencode.de"
-  CLAMAV_ICAP_CLAMD_HOST: "clamav-clamd"
-  CLAMAV_MILTER_CLAMD_HOST: "clamav-clamd"
+  CLAMAV_UPDATE_STRATEGY_TYPE: "RollingUpdate"
+  CLAMAV_UPDATE_STRATEGY_PARTITION: "1"
+  CLAMAV_HPA_ENABLED: "false"
+  CLAMAV_PDB_ENABLED: "false"
+  CLAMAV_PDB_MIN_AVAILABLE: "1"
+  CLAMAV_TOPOLOGY_MAX_SKEW: "1"
+  CLAMAV_TOPOLOGY_KEY: "kubernetes.io/hostname"
+  CLAMAV_TOPOLOGY_UNSATISFIABLE: "ScheduleAnyway"
+
+  ###############################################################################
+  # Persistence Configuration
+  ###############################################################################
+  CLAMAV_PERSISTENCE_ENABLED: "true"
+  CLAMAV_PERSISTENCE_SIZE: "100Mi"
+  # For ReadWriteMany deployment, change to: ReadWriteMany
+  CLAMAV_PERSISTENCE_ACCESS_MODES: "ReadWriteOnce"
+  CLAMAV_PERSISTENCE_STORAGE_CLASS: ""
+
+  ###############################################################################
+  # Resource Configuration
+  ###############################################################################
+  CLAMAV_RESOURCES_LIMITS_CPU: "6000m"
+  CLAMAV_RESOURCES_LIMITS_MEMORY: "8Gi"
+  CLAMAV_RESOURCES_REQUESTS_CPU: "500m"
+  CLAMAV_RESOURCES_REQUESTS_MEMORY: "1Gi"
+
+  ###############################################################################
+  # Image Configuration
+  ###############################################################################
+  # Leave empty to use default image tag from helm chart
+  CLAMAV_IMAGE_TAG: ""
