Update appVersion to rc

--- a/charts/opencloud-microservices/Chart.yaml
+++ b/charts/opencloud-microservices/Chart.yaml
@@ -14,7 +14,7 @@ maintainers:
 type: application
 version: 0.3.8
 # renovate: datasource=docker depName=opencloudeu/opencloud-rolling
-appVersion: 4.0.0
+appVersion: 4.0.0-rc.1
 kubeVersion: ""
 sources:
   - https://github.com/opencloud-eu/helm
