--- a/charts/opencloud-microservices/deployments/helm/helmfile.yaml
+++ b/charts/opencloud-microservices/deployments/helm/helmfile.yaml
@@ -97,10 +97,116 @@ releases:
               # Space Administrator Role set to 100GB
               '2aadd357-682c-406b-8874-293091995fdd': 0
           virusscan:
-            enabled: true
+            enabled: false
             infectedFileHandling: "abort"
             scannerType: "clamav"
             clamavSocket: "tcp://clamav.clamav.svc.cluster.local:3310"
+          policies:
+            enabled: true
+            policies:
+              - fileName: proxy.rego
+                content: |
+                  package proxy
+
+                  import future.keywords.if
+                  import data.utils
+
+                  default granted := true
+
+                  granted = false if {
+                      input.request.method == "PUT"
+                      pathPrefixes := [
+                          "/dav",
+                          "/remote.php/webdav",
+                          "/remote.php/dav",
+                          "/webdav",
+                      ]
+                      restricted := pathPrefixes[_]
+                      startswith(input.request.path, restricted)
+                      utils.is_extension_restricted(input.resource.name)
+                  }
+
+                  granted = false if {
+                      input.request.method == "POST"
+                      pathPrefixes := [
+                          "/data",
+                          "/dav",
+                          "/remote.php/webdav",
+                          "/remote.php/dav",
+                          "/webdav",
+                      ]
+                      restricted := pathPrefixes[_]
+                      startswith(input.request.path, restricted)
+                      utils.is_extension_restricted(input.resource.name)
+                  }
+
+              - fileName: postprocessing.rego
+                content: |
+                  package postprocessing
+
+                  import future.keywords.if
+                  import data.utils
+
+                  default granted := true
+
+                  granted = false if {
+                      utils.is_extension_restricted(input.resource.name)
+                  }
+
+                  granted = false if {
+                      bytes := opencloud.resource.download(input.resource.url)
+                      mimetype := opencloud.mimetype.detect(bytes)
+                      utils.is_mimetype_restricted(mimetype)
+                  }
+
+              - fileName: utils.rego
+                content: |
+                  package utils
+
+                  # For filename checking
+                  RESTRICTED_EXTENSIONS := {
+                      ".exe", ".dll", ".msi", ".scr", ".com", ".pif",
+                      ".bat", ".cmd", ".ps1", ".vbs", ".vbe", ".wsh"
+                  }
+
+                  # For mimetype checking
+                  RESTRICTED_EXTENSIONS_NO_DOT := {
+                      "exe", "dll", "msi", "scr", "com", "pif",
+                      "bat", "cmd", "ps1", "vbs", "vbe", "wsh"
+                  }
+
+                  # Direct MIME type check
+                  RESTRICTED_MIMETYPES := {
+                      "application/x-msdownload",
+                      "application/x-dosexec",
+                      "application/x-executable",
+                      "application/vnd.microsoft.portable-executable",
+                      "application/x-msi",
+                      "application/x-ms-dos-executable",
+                      "application/x-msdos-program",
+                      "application/x-bat",
+                      "application/bat",
+                      "application/x-sh",
+                      "application/x-shellscript"
+                  }
+
+                  # Check filename extension
+                  is_extension_restricted(identifier) {
+                      extension := RESTRICTED_EXTENSIONS[_]
+                      endswith(lower(identifier), extension)
+                  }
+
+                  # Check MIME type
+                  is_mimetype_restricted(mimetype) {
+                      RESTRICTED_MIMETYPES[mimetype]
+                  }
+
+                  is_mimetype_restricted(mimetype) {
+                      extensions := opencloud.mimetype.extensions(mimetype)
+                      ext := extensions[_]
+                      RESTRICTED_EXTENSIONS_NO_DOT[ext]
+                  }
+
           appsIntegration:
             enabled: true
             wopiIntegration:
