--- a/charts/opencloud-microservices/templates/policies/deployment.yaml
+++ b/charts/opencloud-microservices/templates/policies/deployment.yaml
@@ -45,10 +45,8 @@ spec:
               value: 0.0.0.0:9125
             - name: POLICIES_ENGINE_TIMEOUT
               value: {{ .Values.features.policies.engineTimeout | quote }}
-            # We currently don't support enforcing policies as a postprocessing step.
-            # See https://github.com/opencloud/enterprise/issues/5919
-            # - name: POLICIES_POSTPROCESSING_QUERY
-            #   value: "data.postprocessing.granted"
+            - name: POLICIES_POSTPROCESSING_QUERY
+              value: "data.postprocessing.granted"
 
             - name: POLICIES_DEBUG_PPROF
               value: {{ .Values.debug.profiling | quote }}
