--- a/charts/opencloud-microservices/templates/antivirus/deployment.yaml
+++ b/charts/opencloud-microservices/templates/antivirus/deployment.yaml
@@ -21,11 +21,14 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["antivirus", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
             {{- include "oc.events" . | nindent 12 }}
+
+            - name: OC_RUN_SERVICES
+              value: antivirus
 
             - name: ANTIVIRUS_LOG_COLOR
               value: {{ .Values.logging.color | quote }}
