--- a/charts/opencloud-microservices/templates/appregistry/deployment.yaml
+++ b/charts/opencloud-microservices/templates/appregistry/deployment.yaml
@@ -18,10 +18,13 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["app-registry", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
+
+            - name: OC_RUN_SERVICES
+              value: appregistry
 
             - name: APP_REGISTRY_LOG_COLOR
               value: {{ .Values.logging.color | quote }}
