--- a/charts/opencloud-microservices/templates/thumbnails/deployment.yaml
+++ b/charts/opencloud-microservices/templates/thumbnails/deployment.yaml
@@ -32,11 +32,14 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["thumbnails", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
             {{- include "oc.cors" . |nindent 12 }}
+
+            - name: OC_RUN_SERVICES
+              value: thumbnails
 
             - name: THUMBNAILS_LOG_COLOR
               value: {{ .Values.logging.color | quote }}
