--- a/charts/opencloud-microservices/templates/webfinger/deployment.yaml
+++ b/charts/opencloud-microservices/templates/webfinger/deployment.yaml
@@ -20,11 +20,14 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["webfinger", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
             {{- include "oc.cors" . |nindent 12 }}
+
+            - name: OC_RUN_SERVICES
+              value: webfinger
 
             - name: WEBFINGER_LOG_COLOR
               value: {{ .Values.logging.color | quote }}
