--- a/charts/opencloud-microservices/templates/activitylog/deployment.yaml
+++ b/charts/opencloud-microservices/templates/activitylog/deployment.yaml
@@ -20,13 +20,16 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["activitylog", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
             {{- include "oc.events" . | nindent 12 }}
             {{- include "oc.cors" . | nindent 12 }}
             {{- include "oc.persistentStore" . | nindent 12 }}
+
+            - name: OC_RUN_SERVICES
+              value: activitylog
 
             - name: ACTIVITYLOG_LOG_COLOR
               value: {{ .Values.logging.color | quote }}
