--- a/charts/opencloud-microservices/templates/frontend/deployment.yaml
+++ b/charts/opencloud-microservices/templates/frontend/deployment.yaml
@@ -34,12 +34,15 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["frontend", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
             {{- include "oc.cors" . |nindent 12 }}
             {{- include "oc.events" . | nindent 12 }}
+
+            - name: OC_RUN_SERVICES
+              value: frontend
 
             - name: FRONTEND_LOG_COLOR
               value: {{ .Values.logging.color | quote }}
