--- a/charts/opencloud-microservices/templates/idp/deployment.yaml
+++ b/charts/opencloud-microservices/templates/idp/deployment.yaml
@@ -22,10 +22,13 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["idp", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
+
+            - name: OC_RUN_SERVICES
+              value: idp
 
             - name: IDP_LOG_COLOR
               value: {{ .Values.logging.color | quote }}
