--- a/charts/opencloud-microservices/templates/nats/deployment.yaml
+++ b/charts/opencloud-microservices/templates/nats/deployment.yaml
@@ -32,9 +32,12 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["nats", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
+            - name: OC_RUN_SERVICES
+              value: nats
+
             - name: NATS_LOG_COLOR
               value: {{ .Values.logging.color | quote }}
             - name: NATS_LOG_LEVEL
