--- a/charts/opencloud-microservices/templates/ocm/deployment.yaml
+++ b/charts/opencloud-microservices/templates/ocm/deployment.yaml
@@ -20,12 +20,15 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["ocm", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
             {{- include "oc.cors" . |nindent 12 }}
             {{- include "oc.events" . | nindent 12 }}
+
+            - name: OC_RUN_SERVICES
+              value: ocm
 
             - name: OCM_LOG_COLOR
               value: {{ .Values.logging.color | quote }}
