--- a/charts/opencloud-microservices/templates/postprocessing/deployment.yaml
+++ b/charts/opencloud-microservices/templates/postprocessing/deployment.yaml
@@ -20,12 +20,15 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["postprocessing", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
             {{- include "oc.events" . | nindent 12 }}
             {{- include "oc.persistentStore" . | nindent 12 }}
+
+            - name: OC_RUN_SERVICES
+              value: postprocessing
 
             - name: POSTPROCESSING_LOG_COLOR
               value: {{ .Values.logging.color | quote }}
