--- a/charts/opencloud-microservices/templates/proxy/deployment.yaml
+++ b/charts/opencloud-microservices/templates/proxy/deployment.yaml
@@ -20,13 +20,15 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["proxy", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
             {{- include "oc.cacheStore" . | nindent 12 }}
             {{- include "oc.events" . | nindent 12 }}
 
+            - name: OC_RUN_SERVICES
+              value: proxy
 
             - name: PROXY_LOG_COLOR
               value: {{ .Values.logging.color | quote }}
