--- a/charts/opencloud-microservices/templates/settings/deployment.yaml
+++ b/charts/opencloud-microservices/templates/settings/deployment.yaml
@@ -20,12 +20,15 @@ spec:
         - name: {{ .appName }}
           {{- include "oc.image" $ | nindent 10 }}
           command: ["opencloud"]
-          args: ["settings", "server"]
+          args: ["server"]
           {{- include "oc.containerSecurityContext" . | nindent 10 }}
           env:
             {{- include "oc.serviceRegistry" . | nindent 12 }}
             {{- include "oc.cors" . |nindent 12 }}
             {{- include "oc.cacheStore" . | nindent 12 }}
+
+            - name: OC_RUN_SERVICES
+              value: settings
 
             - name: OC_DEFAULT_LANGUAGE
               value: {{ default "en" .Values.features.language.default | quote }}
